Testing a fix on mobile

--- a/css/about-redo.css
+++ b/css/about-redo.css
@@ -78,6 +78,7 @@
 
     .history-item.expanded > .thumbnail {
         width: 100%;
+        height: auto;
     }
 
     .history-item.expanded > .more-info {
